--- a/angular-gifs-app/src/app/gifs/components/card-list/card-list.component.html
+++ b/angular-gifs-app/src/app/gifs/components/card-list/card-list.component.html
@@ -1,16 +1,7 @@
-<div class="row">
-  <div class="col-md-3 col-sm-6" *ngFor="let gif of gifs">
-    <div class="card mb-2 text-center bg-dark">
-      <div>
-        <img
-          [src]="gif.images.downsized_medium.url"
-          [alt]="gif.title"
-          class="card-img-top"
-        />
-        <div class="card-body text-white">
-          <div class="card-text">{{ gif.title }}</div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="row d-flex">
+  <gifs-card
+    *ngFor="let gif of gifs"
+    [gif]="gif"
+    class="col-md-3 col-sm-6"
+  ></gifs-card>
 </div>
