--- a/angular-maps-app/src/app/shared/components/sidebar/sidebar.component.html
+++ b/angular-maps-app/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
-<h2>Paises</h2>
+<h2>Countries</h2>
 <hr />
 
 <ul class="list-group">
-  <li
+  <!--   <li
     class="list-group-item"
     routerLink=""
     routerLinkActive="active"
@@ -15,5 +15,26 @@
   </li>
   <li class="list-group-item" routerLink="contact" routerLinkActive="active">
     Contact page
+  </li> -->
+  <li
+    class="list-group-item"
+    routerLink="countries/by-capital"
+    routerLinkActive="active"
+  >
+    By Capital
+  </li>
+  <li
+    class="list-group-item"
+    routerLink="countries/by-country"
+    routerLinkActive="active"
+  >
+    By Country
+  </li>
+  <li
+    class="list-group-item"
+    routerLink="countries/by-region"
+    routerLinkActive="active"
+  >
+    By Region
   </li>
 </ul>
