Angular Heroes App - Added heroes CRUD

--- a/angular-heroes-app/src/app/heroes/components/card/card.component.html
+++ b/angular-heroes-app/src/app/heroes/components/card/card.component.html
@@ -3,7 +3,12 @@
     <mat-card-title>{{ hero.superhero }}</mat-card-title>
     <mat-card-subtitle>{{ hero.alter_ego }}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image [src]="hero | heroImage" [alt]="hero.superhero" />
+  <img
+    mat-card-image
+    [src]="hero | heroImage"
+    [alt]="hero.superhero"
+    class="mt-1"
+  />
   <mat-card-content class="mt-2">
     <h4>{{ hero.publisher }}</h4>
     <p>
@@ -34,7 +39,7 @@
       mat-button
       mat-raised
       color="primary"
-      [routerLink]="['/heroes/edit', hero.id]"
+      [routerLink]="['/heroes', hero.id]"
     >
       <mat-icon>more_horiz</mat-icon>
     </button>
