--- a/angular-heroes-app/src/app/auth/pages/login-page/login-page.component.html
+++ b/angular-heroes-app/src/app/auth/pages/login-page/login-page.component.html
@@ -8,7 +8,7 @@
     <mat-label>Contraseña</mat-label>
     <input type="password" matInput placeholder="Contraseña" />
   </mat-form-field>
-  <button mat-button mat-flat-button color="primary">
+  <button mat-button mat-flat-button color="primary" (click)="onLogin()">
     Ingresar <mat-icon>save</mat-icon>
   </button>
 
