--- a/angular-auth-app/src/app/dashboard/layout/dashboard-layout.component.html
+++ b/angular-auth-app/src/app/dashboard/layout/dashboard-layout.component.html
@@ -1,1 +1,15 @@
-<p>dashboard-layout works!</p>
+<h1>Dashboard</h1>
+<hr />
+
+<h3>User</h3>
+<pre>
+  {{ user() | json }}
+</pre>
+
+<button
+  class="btn btn-outline-danger"
+  routerLink="/auth/login"
+  (click)="logout()"
+>
+  Logout
+</button>
